--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
   <nav class="navbar navbar-expand-lg navbar-light mb-4" style="background-color: #f8f9fa;">
     <div class="container">
       <a class="navbar-brand" href="{% url 'qnA:home' %}">
-        <img src="{% static 'imgs/anti.jpg' %}" height="25" loading="lazy">
+        <img src="{% static 'imgs/anti.png' %}" height="25" loading="lazy">
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
