--- a/templates/users/login_and_register.html
+++ b/templates/users/login_and_register.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block edit_form %}
 {% block img %}
-<img class="mb-4" src="{% static 'imgs/anti.jpg' %}" height="40">
+<img class="mb-4" src="{% static 'imgs/anti.png' %}" height="40">
 {% endblock img %}
 {% block form %}
 <form action="" method="POST">
